--- a/style.css
+++ b/style.css
@@ -718,7 +718,8 @@ a {
 
 #mainContainer {
   background: #f2f2f2;
-  min-height: calc(100vh - 101px); }
+  min-height: calc(100vh - 101px);
+  z-index: 100; }
 
 #pageContainer {
   padding: 1em 2em 4em 2em;
@@ -788,7 +789,8 @@ a {
   padding-top: 1.5em;
   font-family: "Adobe Garamond Pro", serif;
   overflow-y: scroll;
-  height: 100%; }
+  height: 100%;
+  z-index: 10; }
 
 #siteTitle {
   font-size: 1.7em;
